fix Photography page style on small screens

--- a/src/components/Photography/styles.scss
+++ b/src/components/Photography/styles.scss
@@ -11,6 +11,10 @@
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: .5rem;
     align-items: flex-start;
+
+    @media (max-width: $xsmall-screen-width) {
+      grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
+    }
   }
 
   &__gallery-image {
